Editor: Add memory and graph inspection functions to the dev module (#9809)
* Editor: Add various dev-time report functions

* Editor: Log duration and memory usage after loading the project

* Editor: Added aggregate-into function to coll module

* Editor: Added has-explicit-arity? function to fn module

* Editor: Added flip function to coll module

* Editor: Added memory report functions to mem module

* Editor: Moved call-logger functions from integration.test-util to util.fn

* Editor: Add missing require

* Editor: Added cat and concat to util.eduction module

* Editor: Changed util.coll/aggregate-into behavior to operate on sequences of pairs

* Editor: Added dev functions to inspecting resource dependencies and show progress

* Editor: Added load-project dev module for loading and inspecting a headless project graph

* Review fixes